--- a/views/classifications.haml
+++ b/views/classifications.haml
@@ -9,7 +9,7 @@
   - @classifications.each do |c|
     %tr
       %td
-        %a{ :href => classificaton_file(c) }= c.name
+        %a{ :href => classificaton_file(c) }= c.file_name
       %td= c.agent.name
       %td= c.updated_at.strftime('%Y-%m-%d %H:%M:%S')
       %td
