--- a/views/layout.haml
+++ b/views/layout.haml
@@ -7,8 +7,16 @@
     #container
       #header
         #logo
-          %h1
-            %a{:href => '/'}= SiteConfig.title
+          %table{ :style => "width:100%" }
+            %tbody
+              %tr
+                %td{ :style => 'text-align:left' }
+                  %span.title
+                    %a{:href => '/'}= SiteConfig.title
+                %td{ :style => 'text-align:right' }
+                  %form{ :action => '/search', :method => 'get' }
+                    %input{ :type => "string", :name => "search_term" }
+                    %input{ :type => "submit", :value => "Search" }
       #content= yield
       #footer
         /%p#legal= "&mdash; &copy; #{Time.now.strftime('%Y')} #{SiteConfig.author} &mdash;"
