converted to sass3, fixed some bugs

--- a/views/classifications.haml
+++ b/views/classifications.haml
@@ -1,4 +1,4 @@
-%h1 Classifications
+%h1== Classifications (#{Classification.count} total)
 - if @search_term
   %h3== Searh term: '#{@search_term}'
 %table
