--- a/views/main.sass
+++ b/views/main.sass
@@ -1,94 +1,80 @@
-!blue = #095EAE
+$blue: #095eae
 
 body
-  :background #FFF
-  :color #1B1B1B
-  :font-family Verdana, Arial, Helvetica, sans-serif
-
+  background: white
+  color: #1b1b1b
+  font-family: Verdana, Arial, Helvetica, sans-serif
 
 #container
-  :margin 0 auto
-  :width 800px
-
+  margin: 0 auto
+  width: 800px
 
 #header
-  :padding 0.5em 0 0 0
-  :margin 0
-  :text-align center
-  :border-bottom 3px solid #000
-
+  padding: 0.5em 0 0 0
+  margin: 0
+  text-align: center
+  border-bottom: 3px solid black
 
 #content
-  :padding 0
-  :margin 0
-
+  padding: 0
+  margin: 0
 
 #footer
-  :padding 0
-  :margin 0
-  :font-size 0.7em
-  :text-align center
-  :border-top 3px solid #000
-
+  padding: 0
+  margin: 0
+  font-size: 0.7em
+  text-align: center
+  border-top: 3px solid black
 
 h1, h2, h3, h4, h5, h6
-  :margin-top 0em
-  :margin-bottom .25em
-  :font-weight bold
-
+  margin-top: 0em
+  margin-bottom: 0.25em
+  font-weight: bold
 
 h1
-  :font-size 2.2em
-
+  font-size: 2.2em
 
 h2
-  :font-size 1.6em
-
+  font-size: 1.6em
 
 h3
-  :font-size 1.4em
-  :color= !blue
-
+  font-size: 1.4em
+  color: $blue
 
 h4
-  :font-size 1.3em
-
+  font-size: 1.3em
 
 h5
-  :font-size 1.2em
-
+  font-size: 1.2em
 
 h6
-  :font-size 1.1em
-
+  font-size: 1.1em
 
 p
-  :margin-bottom 1em
-  :line-height 1.3
-  :color red
-
+  margin-bottom: 1em
+  line-height: 1.3
+  color: red
 
 a
-  :color !blue
-  :font-weight bold
-  :text-decoration none
-
+  color: $blue
+  font-weight: bold
+  text-decoration: none
   &:hover
-    :text-decoration underline
+    text-decoration: underline
 
 fieldset
-  :margin-top 1em
-  :margin-bottom 1em
+  margin-top: 1em
+  margin-bottom: 1em
 
 input
-  :border 1px solid grey
-  :padding 0.2em
+  border: 1px solid grey
+  padding: 0.2em
 
 #logo
   span.title
-    :font-size 1.8em
+    font-size: 1.8em
   a:hover
-    :text-decoration none
+    text-decoration: none
 
 .form_field
-  :margin-bottom 0.5em
+  margin-bottom: 0.5em
