small css change

--- a/views/classifications.haml
+++ b/views/classifications.haml
@@ -1,7 +1,7 @@
 %h1== Classifications (#{Classification.count} total)
 - if @search_term
   %h3== Searh term: '#{@search_term}'
-%table
+%table#classifications
   %tr
     %th Title
     %th Authors
