added encoding to html pages

--- a/views/classifications.haml
+++ b/views/classifications.haml
@@ -1,7 +1,7 @@
 %h1
   == #{'Found ' if @search_term}Classifications (#{@total_rows} total)
 - if @search_term
-  %h3== Searh term: '#{@search_term}'
+  %h3== Search term: '#{@search_term}'
 %table#classifications
   %tr
     %th Title
