--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,8 +1,9 @@
-!!!
+!!! 5
 %html
   %head
+    %meta{ :charset => "UTF-8" }/
     %title= @title || SiteConfig.title
-    %link{:href => '/main.css', :rel => 'stylesheet', :type => 'text/css'}
+    %link{ :href => '/main.css', :rel => 'stylesheet', :type => 'text/css' }
   %body
     #container
       #header
