changing gnaclr structure a little

--- a/views/classification.haml
+++ b/views/classification.haml
@@ -9,6 +9,6 @@
       %tr
         %td= i
         %td
-          %a{ :href => "/classification_file/#{@classification_id}/#{c[:tree_id]}" }
+          %a{ :href => "/classification_file/#{@classification.id}/#{c[:tree_id]}" }
             = c[:file_name]
         %td= c[:message]
