--- a/views/classifications.haml
+++ b/views/classifications.haml
@@ -8,7 +8,7 @@
     %th Authors
     %th Description
     %th Updated
-    %th History
+    %th Details
   - @classifications.each do |c|
     %tr
       %td
@@ -17,6 +17,6 @@
       %td= c.description
       %td= c.updated_at.strftime('%Y-%m-%d %H:%M:%S')
       %td
-        %a{ :href => "/history/#{c.id}" }
+        %a{ :href => "/classification/#{c.id}" }
           all revisions 
   
