making gnaclr ready for staging

--- a/views/classification.haml
+++ b/views/classification.haml
@@ -9,6 +9,6 @@
       %tr
         %td= c[:sequence_number]
         %td
-          %a{ :href => c[:url] }
+          %a{ :href => c[:url_path] }
             = c[:file_name]
         %td= c[:message]
