hacks to format descriptions in views

--- a/views/main.sass
+++ b/views/main.sass
@@ -7,7 +7,7 @@ body
 
 #container
   margin: 0 auto
-  width: 800px
+  width: 80em
 
 #header
   padding: 0.5em 0 0 0
@@ -80,5 +80,11 @@ input
   margin-bottom: 0.5em
 
 #classifications
-  td
+  th
     padding-bottom: 1em
+  td
+    width: 10em
+    vertical-align: top
+    padding-bottom: 1em
+  td.desc
+    width: 35em
