--- a/views/classifications.haml
+++ b/views/classifications.haml
@@ -14,7 +14,7 @@
       %td
         %a{ :href => classificaton_file(c) }= c.title
       %td= c.authors.sort_by {|a| a.last_name.downcase}.map {|a| a.first_name + " " + a.last_name}.join(", ")
-      %td= c.description
+      %td.desc= c.description
       %td= c.updated_at.strftime('%Y-%m-%d %H:%M:%S')
       %td
         %a{ :href => "/classification/#{c.id}" }
