--- a/views/main.sass
+++ b/views/main.sass
@@ -4,6 +4,7 @@ body
   background: white
   color: #1b1b1b
   font-family: Verdana, Arial, Helvetica, sans-serif
+  font-size: 0.85em
 
 #container
   margin: 0 auto
@@ -87,4 +88,7 @@ input
     vertical-align: top
     padding-bottom: 1em
   td.desc
+    width: 35em
+  td.authors
+    width: 20em
     width: 35em
