--- a/views/main.sass
+++ b/views/main.sass
@@ -80,15 +80,20 @@ input
 .form_field
   margin-bottom: 0.5em
 
-#classifications
+table#classifications
+  border-collapse: collapse
   th
     padding-bottom: 1em
+    border-bottom: 1px solid black
   td
     width: 10em
     vertical-align: top
     padding-bottom: 1em
+    padding-top: 1em
+    border-bottom: 1px dotted black
   td.desc
     width: 35em
   td.authors
     width: 20em
-    width: 35em
+  td.last
+    border-bottom: 0
