added a disclamer phrase

--- a/views/classifications.haml
+++ b/views/classifications.haml
@@ -2,6 +2,7 @@
   == #{'Found ' if @search_term}Classifications (#{@total_rows} total)
 - if @search_term
   %h3== Search term: '#{@search_term}'
+%p We urge users of these classifications to acknowledge their authors. No classification should be used in its entirety without first obtaining permission from the source.
 %table#classifications
   %tr
     %th Title
